# soa

./: .gitignore  LICENSE  README.md
db-init/: events.sql
db-init/events/: init.sql  populate.sql
docs/: axum.json
services/axum/: Cargo.toml
services/axum/.sqlx/: query-33c74f67b935bb101d100977e46bad10c29949813d08117611c82568bd896769.json  query-76772bf2c3c32ccc87e4d104be6e1d3fde981f7ca210b9d978d92a9f6cbf8897.json  query-b67c7234cc35cad26b98d5c8e15cc43e5cf23d150ec0744a40e71e9f74c69998.json  query-ece26e3b0efb50bef61eb9f3eeab1375e4d2fb5fe7651f77934be92f94380893.json
services/axum/client-service/: Cargo.toml
services/axum/event-service/: Cargo.toml  Dockerfile  docker-compose.yml
services/axum/event-service/src/: error.rs  lib.rs  links.rs  main.rs
services/axum/event-service/src/handlers/: event.rs  event_packets.rs  events.rs  join_pe.rs  mod.rs  routes.rs  ticket.rs
services/axum/event-service/src/models/: event.rs  event_packets.rs  join_pe.rs  mod.rs  package.rs  ticket.rs  user.rs
services/axum/event-service/src/repositories/: event_packets_repo.rs  event_repo.rs  join_pe_repo.rs  mod.rs  ticket_repo.rs
services/axum/event-service/src/shared/: doc.rs  error.rs  links.rs  mod.rs
