[package]
name = "event-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "time",
  "tls-native-tls",
] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["catch-panic", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
