[package]
name = "event-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.15"
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "time",
  "tls-native-tls",
] }
tokio = { version = "1.48", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["catch-panic", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "reqwest"] }
